updated combat